conexão com base de dados

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "seu_nome/gestao-servico",
+    "name": "natha/gestao-servico",
     "description": "Sistema de gerenciamento de tarefas",
     "type": "project",
     "require": {
